--- a/app/src/main/res/layout/card_view_questions.xml
+++ b/app/src/main/res/layout/card_view_questions.xml
@@ -52,11 +52,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Spinner
-                android:id="@+id/spinnerAnswer"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewAnswer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp" />
+                android:layout_height="match_parent"
+                tools:listitem="@layout/card_view_answer"/>
 
         </LinearLayout>
 
