--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -19,6 +19,7 @@
         android:id="@+id/buttonFinishQuiz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_gravity="bottom"
         android:background="#ff7675"
         android:layout_margin="16dp"
