--- a/app/src/main/res/layout/card_view_answer.xml
+++ b/app/src/main/res/layout/card_view_answer.xml
@@ -12,10 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@drawable/background_answer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center"
+        android:padding="6dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
@@ -24,6 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="18sp"
+            android:textColor="#34495e"
             android:layout_weight="1"
             android:textStyle="bold"
             tools:text="Answer Name" />
