--- a/app/src/main/res/layout/card_view_questions.xml
+++ b/app/src/main/res/layout/card_view_questions.xml
@@ -18,31 +18,48 @@
             android:id="@+id/textViewQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="16dp"
-            tools:text="TextView"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="TextView" />
 
         <LinearLayout
             android:id="@+id/linearLayoutBooleanType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
+            android:layout_marginHorizontal="10dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/buttonTrueAnswer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="6dp"
                 android:layout_weight="1"
-                android:text="@string/button_label_true" />
+                android:background="@drawable/background_button_true"
+                android:text="@string/button_label_true"
+                android:textAllCaps="false"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/buttonFalseAnswer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="6dp"
                 android:layout_weight="1"
-                android:text="@string/button_label_false" />
+                android:background="@drawable/background_button_false"
+                android:text="@string/button_label_false"
+                android:textAllCaps="false"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:ignore="ButtonStyle" />
 
         </LinearLayout>
 
@@ -56,7 +73,7 @@
                 android:id="@+id/recyclerViewAnswer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/card_view_answer"/>
+                tools:listitem="@layout/card_view_answer" />
 
         </LinearLayout>
 
